test-suite/tests/ui/designated/no_argument_itemless.stderr
error: an argument must match the designated parameter
 --> tests/ui/designated/no_argument_itemless.rs:7:1
  |
7 | impl<#[stated] S> Test<> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
