test-suite/tests/ui/designated/no_argument_itemless.rs
use stated::stated;

#[stated(states(A))]
pub struct Test<#[stated] S>;

#[stated]
impl<#[stated] S> Test<> {}

fn main() {}
